refactor: application works with typeorm & postgres database
