# src/routes/specifications.routes.ts
@@ -1,16 +1,11 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-import { listSpecificationController } from "../modules/cars/useCases/listSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationRoutes = Router();
 
-specificationRoutes.post("/", (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
 
-specificationRoutes.get("/", (request, response) => {
-  return listSpecificationController.handle(request, response);
-});
+specificationRoutes.post("/", createSpecificationController.handle);
 
 export { specificationRoutes };
